hphp/hack/test/typecheck/inout/bad_inout_use_variadic1.php
<?hh

function f(string $x, int ...$ys): void {}

function test(): void {
  $v = 123;
  f('bar', $v, inout $v);
}
